<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow>
            <TextView
                android:id="@+id/tvIdCusNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNo" />
            <EditText
                android:id="@+id/etIdCusNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNa" />
            <EditText
                android:id="@+id/etIdCusNa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />"
        </TableRow>
    
   	 	<TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPho" />
            <EditText
                android:id="@+id/etIdCusPho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>
    
    	<TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAdd" />
            <EditText
                android:id="@+id/etIdCusAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

  	<LinearLayout
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content" >

   	    <Button
   	        android:id="@+id/btnIdNext"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_marginRight="30dp"
   	        android:text="@string/btnNext" />

		<Button
		    android:id="@+id/btnIdPrev"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btnPrev" />
	</LinearLayout>
		
</LinearLayout>